# template-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clang-format.yml
.devcontainer/: devcontainer.json
docker/: build-env.Dockerfile
scripts/: build.sh
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  main_test.cc
